Changed date foramt

--- a/src/app/movie-details-page/movie-details-page.component.html
+++ b/src/app/movie-details-page/movie-details-page.component.html
@@ -14,7 +14,7 @@
 
             <ngb-rating [max]="10" [(rate)]="rating" [readonly]="false"></ngb-rating>
 
-            <div class="length">{{movie?.lengthMinutes}} minutes | {{movie?.releaseDate}}.</div>
+            <div class="length">{{movie?.lengthMinutes}} minutes | {{movie?.releaseDate | date}}.</div>
             
             <div class="desc"><strong>Description: </strong>{{movie?.movieDesc}} </div>
 
