--- a/src/app/movie-details-page/movie-details-page.component.html
+++ b/src/app/movie-details-page/movie-details-page.component.html
@@ -11,9 +11,10 @@
             <div class="title">
                 {{movie?.movieTitle}}
             </div>
-
-            <ngb-rating [max]="10" [(rate)]="rating" [readonly]="false"></ngb-rating>
-
+            <button mat-fab color="accent" (click)="rateMovie()">
+                <span *ngIf="rating?.grade!=0">{{rating?.grade}}</span>
+                <span *ngIf="rating?.grade==0" class="star">&#9733;</span>
+            </button>
             <div class="length">{{movie?.lengthMinutes}} minutes | {{movie?.releaseDate}}.</div>
             
             <div class="desc"><strong>Description: </strong>{{movie?.movieDesc}} </div>
