--- a/src/app/movie-details-page/movie-details-page.component.html
+++ b/src/app/movie-details-page/movie-details-page.component.html
@@ -41,20 +41,28 @@
 
     <mat-card>
         
-        {{reviewsLength}} Reviews
+        <div *ngIf="reviewsLength==1">{{reviewsLength}} Review</div>
+        <div *ngIf="reviewsLength!=1">{{reviewsLength}} Reviews</div>
+        
 
         <p>
-            <mat-form-field appearance="standard">
-                <mat-label>add review</mat-label>
-                <input  matInput placeholder="Placeholder" required>
+            <mat-form-field class="reviewline">
+                <mat-label>Leave a review</mat-label>
+                <input matInput >
+                <button 
+                mat-button matSuffix mat-stroked-button >
+                    Add
+                </button>
             </mat-form-field>
         </p>
         
         <div *ngFor = "let review of reviews[movie?.movieId]"> 
-            <p>
-            <span>{{review.user.username}}  {{review.postDate | date}}</span><br/>
-            {{review.reviewText}}
-            </p>
+            <div class="reviewPostdate">
+                <span>{{review.user.username}} </span>
+                {{review.postDate | date}}
+            </div>
+            <p> {{review.reviewText}}</p>
+            
         </div>
         
     </mat-card>
