implemented add review button

--- a/src/app/movie-details-page/movie-details-page.component.html
+++ b/src/app/movie-details-page/movie-details-page.component.html
@@ -52,8 +52,8 @@
         <p>
             <mat-form-field class="reviewline">
                 <mat-label>Leave a review</mat-label>
-                <input matInput >
-                <button 
+                <input matInput [(ngModel)] = "reviewText">
+                <button (click)="addReview({movieId: movieId, reviewText: reviewText})" 
                 mat-button matSuffix mat-stroked-button >
                     Add
                 </button>
