Add button redesigned

--- a/src/app/movie-details-page/movie-details-page.component.html
+++ b/src/app/movie-details-page/movie-details-page.component.html
@@ -54,7 +54,7 @@
             <mat-form-field class="reviewline">
                 <mat-label>Leave a review</mat-label>
                 <input matInput [(ngModel)] = "reviewText">
-                <button (click)="addReview({movieId: movieId, reviewText: reviewText})" 
+                <button *ngIf = "reviewText" (click)="addReview({movieId: movieId, reviewText: reviewText})" 
                 mat-button matSuffix mat-stroked-button >
                     Add
                 </button>
