--- a/src/app/users-requests/users-requests.component.html
+++ b/src/app/users-requests/users-requests.component.html
@@ -1,1 +1,7 @@
-<p>users-requests works!</p>
+<div class="body">
+    
+    <div *ngFor="let movie of movies">
+        {{movie.movieDesc}}
+    </div>
+
+</div>
