--- a/src/app/users-requests/users-requests.component.html
+++ b/src/app/users-requests/users-requests.component.html
@@ -1,7 +1,45 @@
 <div class="body">
     
     <div *ngFor="let movie of movies">
-        {{movie.movieDesc}}
+        <mat-card>
+    
+            <div class="splitscreen">
+          
+                <div class="left">
+                    <img [src]="movie?.posterImgUrl" alt="" >
+                </div>
+              
+                <div class="right">
+                    <div class="title">
+                        {{movie?.movieTitle}}
+                    </div>
+        
+                    <div class="length">{{movie?.lengthMinutes}} minutes | {{movie?.releaseDate | date}}.</div>
+                    
+                    <div class="desc"><strong>Description: </strong>{{movie?.movieDesc}} </div>
+        
+                    <div class="trailer">
+                        <strong>Trailer: </strong>
+                        <a (click)="trailerLink(movie?.trailerUrl)" >{{movie?.trailerUrl}}</a>
+                    </div>
+        
+                    <div class="creators">
+                        <strong>Director:</strong>
+                        Daniel Mac
+                    </div>
+                    <div class="creators">
+                        <strong>Writers:</strong>
+                        G.A. Martin
+                    </div>
+                    <div class="creators">
+                        <strong>Actors:</strong>
+                        Lopez Algan
+                    </div>
+                </div>
+                
+            </div>
+        
+        </mat-card>
     </div>
 
 </div>
