--- a/src/app/users-requests/users-requests.component.html
+++ b/src/app/users-requests/users-requests.component.html
@@ -10,6 +10,7 @@
                 </div>
               
                 <div class="right">
+                    
                     <div class="title">
                         {{movie?.movieTitle}}
                     </div>
@@ -35,10 +36,19 @@
                         <strong>Actors:</strong>
                         Lopez Algan
                     </div>
+
+                    <div class="allow">
+                        <button mat-raised-button > Allow </button>
+                    </div>
+                    <div class="deny">
+                        <button mat-raised-button > Deny </button>
+                    </div>
+                    
                 </div>
                 
             </div>
-        
+            
+
         </mat-card>
     </div>
 
