Created allow request implementation

--- a/src/app/users-requests/users-requests.component.html
+++ b/src/app/users-requests/users-requests.component.html
@@ -38,12 +38,12 @@
                     </div>
 
                     <div class="allow">
-                        <button mat-raised-button > Allow </button>
+                        <button (click)="allowRequest(movie?.movieId)" mat-raised-button > Allow </button>
                     </div>
                     <div class="deny">
                         <button mat-raised-button > Deny </button>
                     </div>
-                    
+
                 </div>
                 
             </div>
