Change sendRequest service location and name

--- a/src/app/requestmovie/requestmovie.component.html
+++ b/src/app/requestmovie/requestmovie.component.html
@@ -87,7 +87,7 @@
         </mat-dialog-content>
 
         <mat-dialog-actions>
-          <button (click)="sendRequest()" mat-raised-button >Submit</button>
+          <button (click)="addMovie()" mat-raised-button >Submit</button>
           <button mat-raised-button mat-dialog-close >Cancel</button>
         </mat-dialog-actions>
 </div>
