--- a/src/app/users-requests/users-requests.component.html
+++ b/src/app/users-requests/users-requests.component.html
@@ -41,7 +41,7 @@
                         <button (click)="allowRequest(movie?.movieId)" mat-raised-button > Allow </button>
                     </div>
                     <div class="deny">
-                        <button mat-raised-button > Deny </button>
+                        <button (click) ="denyRequest(movie?.movieId)" mat-raised-button > Deny </button>
                     </div>
 
                 </div>
