Changed api request to match the new ones

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     <button *ngIf="!authentificationService.isLoggedIn()" (click)="dialogManagerService.openLogin()"> Diary </button>
     <button *ngIf="authentificationService.isLoggedIn()" routerLink="/diary"> Diary </button>
     
-    <button *ngIf="authentificationService.isLoggedIn()" (click)="dialogManagerService.openRequest(null, 'Add Movie')"> Add Movie </button>
+    <button *ngIf="userService.isAdmin()" (click)="openAddMovie()"> Add Movie </button>
 
     <button *ngIf="userService.isAdmin()" routerLink="/users-requests"> UR </button>
 </div>
