Rename user-requests component to movie-requests

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,6 +7,6 @@
     
     <button *ngIf="userService.isAdmin()" (click)="openAddMovie()"> Add Movie </button>
 
-    <button *ngIf="userService.isAdmin()" routerLink="/users-requests"> UR </button>
+    <button *ngIf="userService.isAdmin()" routerLink="/movie-requests"> UR </button>
 </div>
 
