--- a/src/app/_pages/movies/movies.component.css
+++ b/src/app/_pages/movies/movies.component.css
@@ -36,19 +36,19 @@
     background: darkgray;
 }
 
-.body img{
-    padding: 10px;
-    width: 100px;
+img{
+    /* padding: 10px; */
+    width: 150px;
 }
 
 .moviebox{
     cursor: pointer;
-    width: 80%;
-    height: 20vh;
+    width: 100%;
+    /* height: 20vh; */
     padding: 20px;
-    margin: 30px 0;
     background: rgb(185, 185, 185);
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    box-shadow: 0 2pxa 8px rgba(0, 0, 0, 0.26);
+    border-radius: 15px;
     outline: none;
 }
 
@@ -65,3 +65,34 @@
 .splitscreen {
     display:flex;
   }
+
+.searchInput {
+    border: 1;
+    border-color: rgba(194, 195, 196, 0.774);
+    background: rgba(194, 195, 196, 0.774);
+    text-align: left;
+    padding: 10px 20px;
+    width: 100%;
+    border-radius: 4px;
+    outline: none;
+}
+
+/* .container-fluid {
+    background: rgb(231, 236, 240);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+} */
+
+.container-fluid button{
+    border: 0;
+    background-color:rgba(194, 195, 196, 0.774);
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 13px;
+    width: 90px;
+    border-radius: 10px;
+    outline:none;
+}
