--- a/src/app/_pages/movies/movies.component.html
+++ b/src/app/_pages/movies/movies.component.html
@@ -7,14 +7,15 @@
             <button mat-raised-button (click)="search()">Search</button><br/>
         </div>
     </div>
-    <div class="row" style="margin: 10px 0;">
+    <div class="row" style="margin-top: 10px;">
         <div class="col">
             <button mat-raised-button (click)="openFilter()">Filter</button>
             <button mat-raised-button style="margin-left: 20px;" (click)="openSort()">Sort</button>
         </div>
     </div>
 
-    <div class="row moviebox" *ngFor="let movie of movieService.movies" style="margin-top: 20px">
+    <!-- <div class="row moviebox" *ngFor="let movie of movieService.movies" style="margin-top: 20px"
+    [routerLink] = "['/movie-details', movie.movieId]">
         <div class="col-2">
             <img [src]="movie.posterImgUrl" alt="" >
         </div>
@@ -29,6 +30,17 @@
                     {{movie.movieDesc}}
                 </div>
             </div>
+        </div>
+    </div> -->
+
+    <div class="media moviebox"*ngFor="let movie of movieService.movies" style="margin-top: 20px"
+    [routerLink] = "['/movie-details', movie.movieId]">
+        <div class="media-left">
+            <img [src]="movie.posterImgUrl" alt="" >
+        </div>
+        <div class="media-body" >
+            <div class="title">{{movie.movieTitle}}</div>
+            {{movie.movieDesc}}
         </div>
     </div>
 </div>
