Added tags to the movie model

--- a/src/app/_pages/movie-details/movie-details.component.html
+++ b/src/app/_pages/movie-details/movie-details.component.html
@@ -18,6 +18,7 @@
                 <span *ngIf="userRating?.grade==0" class="star">&#9733;</span>
             </button>
             <span>{{totalRating}}</span>
+            {{movieService.getMovieGenres(movie)}}
             <div class="length">{{movie?.lengthMinutes}} minutes | {{movie?.releaseDate}}.</div>
 
             <div class="length">{{movie?.lengthMinutes}} minutes | {{movie?.releaseDate | date}}.</div>
