Implemented edit and add tags with the movie-info-dialog

--- a/src/app/_dialogs/movie-info-dialog/movie-info-dialog.component.html
+++ b/src/app/_dialogs/movie-info-dialog/movie-info-dialog.component.html
@@ -57,7 +57,7 @@
     <p>
       <mat-form-field appearance="standard">
         <mat-label>Tags</mat-label>
-        <input matInput placeholder="Placeholder">
+        <input [(ngModel)]="movieTags" matInput placeholder="Placeholder">
       </mat-form-field>
     </p>
 
