--- a/src/app/_pages/diary/diary.component.css
+++ b/src/app/_pages/diary/diary.component.css
@@ -1,39 +1,29 @@
-.body{
-    position: inherit;
-    height: 100%;
+.mat-card{
     padding: 20px;
-    background: rgb(231, 236, 240);
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-}
-
-.body img{
-    cursor: pointer;
-    padding: 10px;
-    width: 100px;
-}
-
-.moviebox{
-    /* cursor: pointer; */
-    width: 80%;
-    height: 20vh;
-    padding: 20px;
-    margin-bottom: 20px;
+    margin: 20px;
     background: rgb(185, 185, 185);
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     outline: none;
 }
 
-.moviebox:hover{
+.mat-card:hover{
     background: darkgrey;
+}
+
+.media-left img{
+    cursor: pointer;
+    width: 100px;
+}
+
+.btn-close{
+        position: absolute;
+        right: 20px;
+        bottom: 20px;
 }
 
 .title{
     cursor: pointer;
-    padding: 10px;
+    margin: 10px;
     font-size: 25px;
     font-weight: bold;
 }
-
-.splitscreen {
-    display:flex;
-  }
