--- a/src/app/_pages/movies/movies.component.css
+++ b/src/app/_pages/movies/movies.component.css
@@ -41,30 +41,11 @@ img{
     width: 150px;
 }
 
-.moviebox{
-    cursor: pointer;
-    width: 100%;
-    /* height: 20vh; */
-    padding: 20px;
-    background: rgb(185, 185, 185);
-    box-shadow: 0 2pxa 8px rgba(0, 0, 0, 0.26);
-    border-radius: 15px;
-    outline: none;
-}
-
-.moviebox:hover{
-    background: darkgrey;
-}
-
 .title{
     padding: 10px;
     font-size: 25px;
     font-weight: bold;
 }
-
-.splitscreen {
-    display:flex;
-  }
 
 .searchInput {
     border: 1;
@@ -99,4 +80,20 @@ img{
 
 .media-body{
     margin: 10px;
+}
+
+.media{
+    cursor: pointer;
+    /* width: 100%; */
+    /* height: 20vh; */
+    padding: 20px;
+    background: rgb(185, 185, 185);
+    box-shadow: 0 2pxa 8px rgba(0, 0, 0, 0.26);
+    border-radius: 15px;
+    outline: none;
+    margin-top: 20px;
+}
+
+.media:hover{
+    background: darkgrey;
 }
