--- a/src/app/_pages/movie-details/movie-details.component.html
+++ b/src/app/_pages/movie-details/movie-details.component.html
@@ -2,7 +2,7 @@
     <div class="splitscreen">
   
         <div class="left">
-            <img [src]="movie?.posterImgUrl" alt="" >
+            <img alt="" [src]="movie?.posterImgUrl">
             <button (click)="addWatchlist()"><strong>+ </strong>Add to Watchlist</button><br/>
             <button (click)="addDiary()"><strong>+ </strong>Add to Viewed</button>
             <button *ngIf="userService.isAdmin()" (click)="openEditMovie()" ><strong>+ </strong>Edit</button>
