Get image url from response

--- a/src/app/_dialogs/movie-info-dialog/movie-info-dialog.component.html
+++ b/src/app/_dialogs/movie-info-dialog/movie-info-dialog.component.html
@@ -80,7 +80,7 @@
           </button>
         </mat-toolbar>
   
-        <input type="file" (change)="onFileSelected($event)">
+        <input type="file" #UploadFileInput id="fileUpload" (change)="onFileSelected($event)" name="fileUpload"
           multiple="multiple" accept="image/*" />
       </mat-form-field>
     </p>
