--- a/src/app/_pages/diary/diary.component.html
+++ b/src/app/_pages/diary/diary.component.html
@@ -5,11 +5,15 @@
 
         <div class="media-left">
             <button mat-button class="btn-close" mat-mini-fab color="primary" (click) = "removeDiary(movie.movieId)"><mat-icon>delete</mat-icon></button>
-            <img [src]="movie.posterImgUrl" alt=""  [routerLink] = "['/movie-details', movie.movieId]">
+            <span matBadge="userRating()" matBadgeOverlap="false">
+                <img [src]="movie.posterImgUrl" alt=""  [routerLink] = "['/movie-details', movie.movieId]">
+            </span>
         </div>
         
         <div class="media-body" >
-            <div class="title" [routerLink] = "['/movie-details', movie.movieId]">{{movie.movieTitle}}</div>
+            <div class="title" [routerLink] = "['/movie-details', movie.movieId]">
+                <span>{{movie.movieTitle}}</span>
+            </div>
             <mat-accordion>
                 <mat-expansion-panel hideToggle>
                     <mat-expansion-panel-header>
